# LLM_Service_Node

./: orientations.json
llm_control_dev/: CMakeLists.txt  package.xml
llm_control_dev/launch/: llm_walker_launch.py
llm_control_dev/scripts/: llm_control_node.py
llm_control_dev/src/: llm_control_node.py  llm_service_node.cpp
