<?xml version="1.0"?>
<package format="3">
  <name>llm_control_dev</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gabriel@todo.todo">gabriel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
